# counterfactual-cell-world

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: synthetic_small.yaml
docs/: dataset_notes.md  model.md  reproducibility.md
paper/: main.tex
results/synthetic_small/: ground_truth_graph.npy  history.csv  learned_graph.npy  metrics.json
scripts/: make_figures.py  run_synthetic.py
src/cellworld/: __init__.py  cli.py
src/cellworld/data/: __init__.py  cellxgene.py  synthetic.py  types.py
src/cellworld/eval/: __init__.py  metrics.py
src/cellworld/models/: __init__.py  layers.py  world.py
src/cellworld/training/: __init__.py  trainer.py
src/cellworld/utils/: __init__.py  config.py
tests/: test_metrics.py  test_model.py  test_synthetic_world.py
