[project]
name = "counterfactual-cell-world"
version = "0.1.0"
description = "A research implementation for distribution-level counterfactual prediction in single-cell perturbation systems."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Atila Vahedian" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "torch>=2.2",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "matplotlib>=3.7",
  "pytest>=8.0",
  "ruff>=0.6"
]

[project.scripts]
cellworld-train = "cellworld.cli:train_main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

